# AUTOSAR_Classic_MyMCAL

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  arm-none-eabi-gcc.cmake  main.c
Config/: Adc_Cfg.c  Adc_Cfg.h  Port_cfg.c  Port_cfg.h  Pwm_Cfg.h  Pwm_Lcfg.c
IoHwAb/: IoHwAb.c  IoHwAb.h  IoHwAb_Cfg.c  IoHwAb_Cfg.h
MCAL/Adc/: Adc.c  Adc_Types.h
MCAL/Dio/: Dio.h
MCAL/Port/: Port.c  Port.h
MCAL/Pwm/: Pwm.c
docs/: I_O Hardware Abstraction - IoHwAb) trong AUTOSAR.docx  I_O Hardware Abstraction - IoHwAb) trong AUTOSAR.md  [Mini-Project 1] Hệ thống điều khiển quạt làm mát động cơ.docx  [Mini-Project 1] Hệ thống điều khiển quạt làm mát động cơ.md  [Tài liệu] Hướng dẫn sử dụng API module ADC (MCAL) cho STM32F103 (SPL).docx  [Tài liệu] Hướng dẫn sử dụng API module ADC (MCAL) cho STM32F103 (SPL).md  [Tài liệu] Hướng dẫn sử dụng API module DIO (MCAL) cho STM32F103 (SPL).docx  [Tài liệu] Hướng dẫn sử dụng API module DIO (MCAL) cho STM32F103 (SPL).md  [Tài liệu] Hướng dẫn sử dụng API module PORT (MCAL) cho STM32F103 (SPL).docx  [Tài liệu] Hướng dẫn sử dụng API module PORT (MCAL) cho STM32F103 (SPL).md  [Tài liệu] Hướng dẫn sử dụng API module PWM (MCAL) cho STM32F103 (SPL).docx  [Tài liệu] Hướng dẫn sử dụng API module PWM (MCAL) cho STM32F103 (SPL).md
platform/include/: Std_Types.h
platform/spl/inc/: stm32f10x_conf.h
